[package]
name = "tokio-openssl"
version = "0.6.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/tokio-rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
openssl = "0.10.61"
openssl-sys = "0.9"
tokio = "1.0"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["full"] }
